--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,7 @@ body {
   font-family: Righteous, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: #f3f4f6;
+  scroll-behavior: smooth;
 }
 
 a {
